# test-collatz-conjecture-with-yarp-Iaxama

./: .gitignore
code/: CMakeLists.txt  comm_interface.thrift
code/app/: CMakeLists.txt  CMakeLists.txt~
code/app/scripts/: collatz_client_server.xml
code/client/: CMakeLists.txt  client_interface.thrift
code/client/include/: Client.h
code/client/lib/: client_interface_thrift.cmake
code/client/lib/include/: ClientIDLInterface.h  ClientInterface.h
code/client/lib/src/: ClientIDLInterface.cpp  ClientInterface.cpp
code/client/src/: Client.cpp  clientMain.cpp
code/server/: CMakeLists.txt  server_interface.thrift
code/server/include/: Server.h
code/server/lib/: server_interface_thrift.cmake
code/server/lib/include/: ServerIDLInterface.h
code/server/lib/src/: ServerIDLInterface.cpp
code/server/src/: Server.cpp  serverMain.cpp
